[gd_scene load_steps=8 format=3 uid="uid://cdkny5uv688g"]

[ext_resource type="Script" path="res://scenes/end_menu.gd" id="1_6no13"]
[ext_resource type="FontFile" uid="uid://di11nl5kthfq0" path="res://assets/fonts/Noto_Sans,Teko/Teko/static/Teko-Bold.ttf" id="2_56dsp"]
[ext_resource type="FontFile" uid="uid://brvho8272kavv" path="res://assets/fonts/Noto_Sans,Teko/Noto_Sans/static/NotoSans-ExtraBold.ttf" id="3_b1fol"]

[sub_resource type="Gradient" id="Gradient_c70ml"]
colors = PackedColorArray(0.384523, 0.362104, 0.641826, 1, 0.0122096, 0.0485086, 0.185651, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tvaxf"]
gradient = SubResource("Gradient_c70ml")

[sub_resource type="LabelSettings" id="LabelSettings_u42s8"]
font = ExtResource("2_56dsp")
font_size = 60

[sub_resource type="Theme" id="Theme_67ns5"]

[node name="EndMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_tvaxf")
script = ExtResource("1_6no13")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game over!
Player 1 wins!"
label_settings = SubResource("LabelSettings_u42s8")
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RematchButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_67ns5")
theme_override_fonts/font = ExtResource("3_b1fol")
theme_override_font_sizes/font_size = 22
text = "Rematch"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_b1fol")
theme_override_font_sizes/font_size = 22
text = "Go to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RematchButton" to="." method="_on_rematch_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
